--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@next-auth/prisma-adapter": "^0.5.2-next.19",
+    "@prisma/client": "^3.6.0",
     "next": "9.5.5",
+    "next-auth": "^4.0.2",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-markdown": "5.0.2"
@@ -20,6 +23,7 @@
     "@types/next-auth": "3.1.14",
     "@types/node": "14.14.6",
     "@types/react": "16.9.56",
+    "prisma": "^3.6.0",
     "typescript": "4.0.5"
   }
 }
