--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "@types/node": "14.14.6",
     "@types/react": "16.9.56",
     "prisma": "^3.6.0",
-    "typescript": "4.0.5"
+    "typescript": "^4.5.2"
   }
 }
